--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -18,63 +18,45 @@
     background: #1021f9;
 }
 
-.blue_btn:active {
-    transform: translateY(4px);
+.grey_btn:active, .red_btn:active, .blue_btn:active {
+    transform: translateY(2px);
 }
 
-.grey_btn {
-     font-size: 13px;
-     padding: 8px;
-     height: 35px;
-     color: #FFFFFF;
-     flex: 0 0 auto;
-     border: none;
-
-     cursor: pointer;
-     font-weight: 500;
-     background: #939393;
-     border-radius: 15px;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
-    margin-right: 4px;
-    margin-left: 4px;
-}
-
-.grey_btn:first-child {
-    margin-left: 10px;
-}
-
-.grey_btn:hover {
-    background: #9e9e9e;
-}
-
-.red_btn img, .grey_btn img {
-    height: 14px;
-    margin-right: 3px;
-}
-
-.red_btn {
+.grey_btn, .red_btn {
     font-size: 13px;
-    padding: 8px;
-    height: 35px;
     color: #FFFFFF;
-    flex: 0 0 auto;
+
     border: none;
+    margin: 0;
+    padding: 10px;
 
     cursor: pointer;
-    font-weight: 400;
-    background: #FF4646;
+    font-weight: 600;
+    background: #939393;
     border-radius: 15px;
 
     display: flex;
     flex-direction: row;
     align-items: center;
+    transition: background 0.3s ease;
+}
 
-    margin-right: 4px;
-    margin-left: 4px;
+.grey_btn {
+    margin-right: 10px;
+}
+
+.grey_btn:hover {
+    background: #828282;
+}
+
+.red_btn img, .grey_btn img {
+    height: 14px;
+    margin-right: 5px;
+}
+
+.red_btn {
+    background: #FF4646;
+    border-radius: 15px;
 }
 
 .red_btn:hover {
