--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -18,20 +18,29 @@
     padding: 5px;
 }
 
-input {
-    width: auto;
-    font-weight: normal;
-    flex: 1 0 auto;
-    font-size: 13px;
+input[type="text"] {
+     width: auto;
+     font-weight: normal;
+     flex: 1 0 auto;
+     font-size: 13px;
 
-    border: none;
-    background: none;
-    height: 100%;
+     border: none;
+     background: none;
+     height: 100%;
 
-    appearance: none;
-    -webkit-appearance: none;
+     appearance: none;
+     -webkit-appearance: none;
+ }
+
+input[type="checkbox"] {
+    /*appearance: none;*/
+    /*-webkit-appearance: none;*/
 }
 
 input:focus {
+    outline: none;
+}
+
+button:focus {
     outline: none;
 }
