--- a/src/styles/edit_panel.css
+++ b/src/styles/edit_panel.css
@@ -1,6 +1,10 @@
 @keyframes visibleAnimation {
-    from { transform: translate(-50%, 100%); }
-    to { transform: translate(-50%, 0%); }
+    from {
+        opacity: 0;
+        transform: translate(-50%, 100%); }
+    to {
+        opacity: 1;
+        transform: translate(-50%, 0%); }
 }
 
 
@@ -10,7 +14,7 @@
     left: 50%;
     transform: translateX(-50%);
     width: auto;
-    animation: visibleAnimation .5s 1 ease-in-out;
+    animation: visibleAnimation .3s 1 ease-in-out;
 
     background: #191933;
     border-radius: 20px 20px 0 0;
@@ -25,58 +29,6 @@
 
 .edit_buttons {
 
-}
-
-@supports (-webkit-appearance: none) or (-moz-appearance: none) {
-    input[type='checkbox'] {
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        height: 21px;
-        width: 21px;
-        position: relative;
-        margin: 0;
-        cursor: pointer;
-        border: 1px solid #BBC1E1;
-        background: #fff;
-        border-radius: 3px;
-        -webkit-transition: background .3s, border-color .3s;
-        transition: background .3s, border-color .3s;
-    }
-    input[type='checkbox']:checked {
-        background: #000742;
-        border: 1px solid #000742;
-    }
-    input[type='checkbox']:disabled {
-        cursor: not-allowed;
-        opacity: .5;
-    }
-    input[type='checkbox']:hover:not(:disabled) {
-        border: 1px solid #000742;
-    }
-    td input[type='checkbox']:after {
-        content: '';
-        position: absolute;
-        width: 5px;
-        height: 9px;
-        border: 2px solid #fff;
-        border-top: 0;
-        border-left: 0;
-        left: 6px;
-        top: 3px;
-        -webkit-transform: rotate(43deg);
-        transform: rotate(43deg);
-    }
-
-    th input[type='checkbox']:after {
-        content: '';
-        position: absolute;
-        width: 10px;
-        border-top: 3px solid #fff;
-
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-    }
 }
 
 @media (max-width: 750px) {
