--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,12 +1,12 @@
 .search {
-    min-width: 200px;
+    min-width: 150px;
     background: #FFFFFF;
     border: 2px solid #EFEFEF;
     box-sizing: border-box;
     box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25);
     border-radius: 7px;
     height: 35px;
-    flex: 1 0 auto;
+    flex: 1 0;
     display: flex;
     flex-direction: row;
     align-items: center;
