--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -14,11 +14,11 @@
     font-weight: 600;
 }
 
-.blue_btn:hover {
+.blue_btn:hover:not(:disabled) {
     background: #1021f9;
 }
 
-.grey_btn:active, .red_btn:active, .blue_btn:active {
+.grey_btn:active:not(:disabled), .red_btn:active:not(:disabled), .blue_btn:active:not(:disabled) {
     transform: translateY(2px);
 }
 
@@ -45,7 +45,7 @@
     margin-right: 10px;
 }
 
-.grey_btn:hover {
+.grey_btn:hover:not(:disabled) {
     background: #828282;
 }
 
@@ -59,6 +59,11 @@
     border-radius: 15px;
 }
 
-.red_btn:hover {
+.red_btn:hover:not(:disabled) {
     background: #ff1240;
+}
+
+.blue_btn:disabled, .grey_btn:disabled, .red_btn:disabled {
+    cursor: not-allowed;
+    opacity: 0.4;
 }
