--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -79,6 +79,18 @@ th:nth-child(4), th:nth-child(5) {
     width: 100px;
 }
 
+th:nth-child(6) {
+    width: 20px;
+}
+
+td:nth-child(6):hover {
+     cursor: pointer;
+ }
+
+td img {
+    width: 18px;
+}
+
 @media (max-width: 600px) {
     th:nth-child(1) {
         width: 10px;
@@ -89,11 +101,21 @@ th:nth-child(4), th:nth-child(5) {
     }
 
     th:nth-child(4) {
-        width: 50px;
+        width: 30px;
     }
 
     th:nth-child(5) {
-        width: 40px;
+          width: 20px;
+    }
+
+    th:nth-child(6) {
+        width: 10px;
+    }
+}
+
+@media (max-width: 400px) {
+    td:nth-child(3) {
+        font-size: 10px;
     }
 }
 
