--- a/src/styles/edit_panel.css
+++ b/src/styles/edit_panel.css
@@ -1,4 +1,4 @@
-@keyframes visibleAnimation {
+@keyframes upAnimation {
     from {
         opacity: 0;
         transform: translate(-50%, 100%); }
@@ -14,7 +14,7 @@
     left: 50%;
     transform: translateX(-50%);
     width: auto;
-    animation: visibleAnimation .3s 1 ease-in-out;
+    animation: upAnimation .3s 1 ease-in-out;
 
     background: #191933;
     border-radius: 20px 20px 0 0;
