--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -100,6 +100,25 @@
     box-shadow: none;
 }
 
+.modal .choice .blue_btn:first-child {
+    margin-right: 10px;
+}
+
+.modal .choice .blue_btn {
+    display: inline-block;
+    font-weight: bold;
+    color: #fff;
+    font-size: 14px;
+    height: 40px;
+    width: 145px;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    margin: 10px auto 10px auto;
+
+    box-shadow: none;
+}
+
 .modal .window .close {
     position: absolute;
     top: 15px;
@@ -115,6 +134,10 @@
     color: red;
     font-size: 10px;
     margin-top: -10px;
+}
+
+.modal .window .center {
+    text-align: center;
 }
 
 .modal .window .close img {
