--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
 @import './styles/index.css';
-@import './styles/page.css';
-@import './styles/search.css';
+
+@import './styles/animations.css';
 @import './styles/buttons.css';
+
+@import './styles/page.css';
+@import './styles/modal.css';
+
+@import './styles/search.css';
 @import './styles/edit_panel.css';
 @import './styles/table.css';
-@import './styles/modal.css';
