--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -1,6 +1,6 @@
 .page {
     max-width: 980px;
-    margin: auto 40px auto auto;
+    margin: 40px auto auto auto;
     padding: 2px;
 
     background: #EFEFEF;
