--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -1,31 +1,34 @@
 .modal {
-    width: 100%;
-    height: 100%;
     position: fixed;
     top: 0;
     left: 0;
+
+    width: 100%;
+    height: 100%;
+
     display: flex;
     align-items: center;
     justify-content: center;
+
     z-index: 2;
 }
 
 .modal .window {
+    position: relative;
+    width: 500px;
+    height: auto;
+    max-width: 380px;
+
     background: #FFFFFF;
     border-radius: 10px;
-    width: 500px;
-    padding: 20px;
-    height: auto;
 
-    max-width: 380px;
-    flex: 1;
+    margin: 10px;
+    padding: 20px;
+    /*flex: 1;*/
 
     text-align: center;
-    z-index: 3;
-    margin: 10px;
     animation: visibleAnimation .5s 1 ease-in-out;
-
-    position: relative;
+    z-index: 3;
 }
 
 .modal .window .title, .modal .window .title_info {
@@ -49,69 +52,27 @@
 }
 
 .modal .background {
-    background: rgba(0,0,0,0.3);
-    width: 100%;
-    height: 100%;
     position: fixed;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
+
+    background: rgba(0,0,0,0.3);
     animation: visibleAnimation .5s 1 ease-in-out;
 }
 
-.modal .line {
-    background: #FCFBFB;
-    border: 2px solid #C9C9C9;
-    border-radius: 12px;
-    height: 40px;
-    width: 300px;
+.modal .standard_btn {
     margin: 10px auto 10px auto;
-    text-align: center;
-    box-sizing: border-box;
 }
 
-.modal .line input {
-    border: none;
-    background: none;
-    height: 100%;
-    width: 95%;
-    font-size: 13px;
-    font-weight: bold;
-    appearance: none;
-    -webkit-appearance: none;
-}
-
-.modal .blue_btn {
-    font-weight: bold;
-    color: #fff;
-    font-size: 14px;
-    height: 40px;
-    width: 300px;
-    border: none;
-    border-radius: 12px;
-    cursor: pointer;
-    display: block;
-    margin: 10px auto 10px auto;
-
-    box-shadow: none;
-}
-
-.modal .choice .blue_btn:first-child {
+.modal .choice .standard_btn:first-child {
     margin-right: 10px;
 }
 
-.modal .choice .blue_btn {
+.modal .choice .standard_btn {
     display: inline-block;
-    font-weight: bold;
-    color: #fff;
-    font-size: 14px;
-    height: 40px;
     width: 145px;
-    border: none;
-    border-radius: 12px;
-    cursor: pointer;
-    margin: 10px auto 10px auto;
-
-    box-shadow: none;
 }
 
 .modal .window .close {
@@ -122,23 +83,23 @@
     opacity: 0.7;
 }
 
-.modal .window .err {
-    margin: auto;
-    width: 280px;
-    text-align: left;
-    color: red;
-    font-size: 10px;
-    margin-top: -10px;
-}
-
-.modal .window .center {
-    text-align: center;
-}
-
 .modal .window .close img {
     width: 15px;
 }
 
 .modal .window .close:hover {
     opacity: 1;
+}
+
+.modal .window .err {
+    width: 280px;
+    margin: -10px auto auto auto;
+
+    text-align: left;
+    color: red;
+    font-size: 10px;
+}
+
+.modal .window .center {
+    text-align: center;
 }
