--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,50 +1,22 @@
 .search {
-    min-width: 150px;
-    background: #FFFFFF;
-    border: 2px solid #EFEFEF;
-    box-sizing: border-box;
-    box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 7px;
-    height: 35px;
-    flex: 1 0;
     display: flex;
+    flex: 1 0;
     flex-direction: row;
     align-items: center;
+
+    min-width: 150px;
     margin-right: 10px;
+    height: 35px;
+    box-sizing: border-box;
+
+    background: #FFFFFF;
+    border: 2px solid #EFEFEF;
+    border-radius: 7px;
+
+    box-shadow: 0 5px 4px rgba(0, 0, 0, 0.25);
 }
 
 .search img {
     width: 20px;
     padding: 5px;
-}
-
-input[type="text"] {
-     width: auto;
-     font-weight: normal;
-     flex: 1 0 auto;
-     font-size: 13px;
-
-     border: none;
-     background: none;
-     height: 100%;
-
-     appearance: none;
-     -webkit-appearance: none;
- }
-
-input[type="checkbox"] {
-    /*appearance: none;*/
-    /*-webkit-appearance: none;*/
-}
-
-input:focus {
-    outline: none;
-}
-
-button:focus {
-    outline: none;
-}
-
-span.yellow {
-    background: yellow;
 }
