--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -1,15 +1,15 @@
-table {
-    width: 100%;
-    border-collapse: collapse;
-    table-layout:fixed;
-}
-
 h1 {
     margin-top: 25px;
     font-size: 12px;
     color: #ababab;
     font-style: italic;
     font-weight: 400;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    table-layout:fixed;
 }
 
 th {
@@ -29,139 +29,39 @@ td {
     color: #323232;
 }
 
-td .edit {
-    background: black;
-    mask-size: cover;
-    mask: url(../images/penIcon.svg);
-}
-
-td:nth-child(3) {
-    text-decoration: underline;
-    cursor: pointer;
-}
-
-td:nth-child(3):hover {
-    color: #1021f9;
-}
-
-tr:not(.checked):nth-child(odd){
+table tr:not(.checked):nth-child(odd){
     background: #f8f8f8;
 }
 
-.checked {
+table tr .checked {
     border-color: #000742;
     background: #e0e0e0;
 }
 
-tr {
+table tr {
     -webkit-transition: background .3s, border-color .3s;
     transition: background .3s, border-color .3s;
     border-color: white;
     border-left: 3px solid white;
 }
 
-th {
+table th {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 1;
 }
 
-th:nth-child(-n+2) {
-    width: 35px;
-}
-
-th:nth-child(1) {
-    cursor: pointer;
-}
-
-td:nth-child(1) {
-    cursor: pointer;
-}
-
-td:nth-child(3) {
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    /* text-align: left; */
-    overflow: hidden;
-}
-
-th:nth-child(4), th:nth-child(5) {
-    width: 100px;
-}
-
-th:nth-child(6) {
-    width: 20px;
-}
-
-td:nth-child(6) {
-    cursor: pointer;
-    opacity: 0.7;
-}
-
-td:nth-child(6):hover {
-    opacity: 1;
- }
-
-td img {
+table td img {
     width: 18px;
 }
 
-@media (max-width: 600px) {
-    th:nth-child(1) {
-        width: 10px;
-    }
-
-    th:nth-child(2) {
-        width: 10px;
-    }
-
-    th:nth-child(4) {
-        width: 30px;
-    }
-
-    th:nth-child(5) {
-          width: 20px;
-    }
-
-    th:nth-child(6) {
-        width: 10px;
-    }
-}
-
-@media (max-width: 400px) {
-    td:nth-child(3) {
-        font-size: 10px;
-    }
+span.yellow {
+    background: yellow;
 }
 
 @supports (-webkit-appearance: none) or (-moz-appearance: none) {
-    input[type='checkbox'] {
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        height: 21px;
-        width: 21px;
-        position: relative;
-        margin: 0;
-        cursor: pointer;
-        border: 1px solid #BBC1E1;
-        background: #fff;
-        border-radius: 3px;
-        -webkit-transition: background .3s, border-color .3s;
-        transition: background .3s, border-color .3s;
-    }
-    input[type='checkbox']:checked {
-        background: #000742;
-        border: 1px solid #000742;
-    }
-    input[type='checkbox']:disabled {
-        cursor: not-allowed;
-        opacity: .5;
-    }
-    input[type='checkbox']:hover:not(:disabled) {
-        border: 1px solid #000742;
-    }
-    td input[type='checkbox']:after {
+    table td input[type='checkbox']:after {
         content: '';
         position: absolute;
         width: 5px;
@@ -175,7 +75,7 @@ td img {
         transform: rotate(43deg);
     }
 
-    th input[type='checkbox']:after {
+    table th input[type='checkbox']:after {
         content: '';
         position: absolute;
         width: 10px;
@@ -186,8 +86,7 @@ td img {
         transform: translate(-50%, -50%);
     }
 
-    th input[type='checkbox'], td input[type='checkbox'] {
-        display: inline-block;
+    table th input[type='checkbox'], table td input[type='checkbox'] {
         vertical-align: middle;
     }
 }
