--- a/src/styles/modules.css
+++ b/src/styles/modules.css
@@ -71,7 +71,10 @@ table[name='modules'] td:nth-child(6):hover {
 }
 
 @media (max-width: 400px) {
-    table[name='modules'] td:nth-child(3) {
+    table[name='modules'] th:nth-child(-n+6) {
+        font-size: 10px;
+    }
+    table[name='modules'] td:nth-child(-n+6) {
         font-size: 10px;
     }
 }
