Lessons, homework and marks were added

--- a/src/styles/edit_panel.css
+++ b/src/styles/edit_panel.css
@@ -16,6 +16,8 @@
 
     transform: translateX(-50%);
     animation: upAnimationEP .3s 1 ease-in-out;
+
+    z-index: 2;
 }
 
 .edit_panel .grey_bg {
