--- a/src/index.css
+++ b/src/index.css
@@ -11,5 +11,8 @@
 @import './styles/edit_panel.css';
 
 @import './styles/modules.css';
+@import './styles/lessons.css';
+@import './styles/lesson.css';
 @import './styles/table.css';
-
+@import './styles/color_elements.css';
+@import './styles/top.css';
