--- a/src/styles/modules.css
+++ b/src/styles/modules.css
@@ -3,15 +3,11 @@ table[name='modules'] td:nth-child(3) {
     cursor: pointer;
 }
 
-table[name='modules'] td:nth-child(3):hover {
-    color: #1021f9;
-}
-
 table[name='modules'] th:nth-child(-n+2) {
     width: 35px;
 }
 
-table[name='modules'] th:nth-child(1) {
+table[name='modules'] th:nth-child(1):not([disabled]) {
     cursor: pointer;
 }
 
@@ -19,12 +15,12 @@ table[name='modules'] td:nth-child(1) {
     cursor: pointer;
 }
 
-table[name='modules'] td:nth-child(3) {
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    /* text-align: left; */
-    overflow: hidden;
-}
+/*table[name='modules'] td:nth-child(3) {*/
+/*    text-overflow: ellipsis;*/
+/*    white-space: nowrap;*/
+/*    !* text-align: left; *!*/
+/*    overflow: hidden;*/
+/*}*/
 
 table[name='modules'] th:nth-child(4), table[name='modules'] th:nth-child(5) {
     width: 100px;
@@ -48,7 +44,7 @@ table[name='modules'] td:nth-child(6):hover {
     opacity: 1;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 680px) {
     table[name='modules'] th:nth-child(1) {
         width: 10px;
     }
