--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -1,15 +1,7 @@
-h1 {
-    margin-top: 25px;
-    font-size: 12px;
-    color: #ababab;
-    font-style: italic;
-    font-weight: 400;
-}
-
 table {
     width: 100%;
     border-collapse: collapse;
-    table-layout:fixed;
+    table-layout: fixed;
 }
 
 th {
@@ -27,6 +19,26 @@ td {
     padding: 13px;
     text-align: center;
     color: #323232;
+}
+
+td a {
+    width: 100%;
+    display: block;
+    color: #323232;
+
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    /* text-align: left; */
+    overflow: hidden;
+}
+
+td a:hover {
+    color: #1021f9;
+}
+
+table th[disabled] {
+    cursor: not-allowed;
+    pointer-events: none;
 }
 
 table tr:not(.checked):nth-child(odd){
@@ -58,6 +70,19 @@ table td img {
 
 span.yellow {
     background: yellow;
+}
+
+.title-table {
+    margin-top: 25px;
+    font-size: 12px;
+    color: #ababab;
+    font-style: italic;
+    font-weight: 400;
+    width: 100%;
+}
+
+.title-table .notes {
+    float: right;
 }
 
 @supports (-webkit-appearance: none) or (-moz-appearance: none) {
