Postcss and styles were updated

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 
 @import './styles/modules.css';
 @import './styles/lessons.css';
-@import './styles/lesson.css';
+@import './styles/marks.css';
 @import './styles/table.css';
 @import './styles/color_elements.css';
 @import './styles/top.css';
