--- a/src/styles/color_elements.css
+++ b/src/styles/color_elements.css
@@ -68,7 +68,7 @@
 
     white-space: nowrap;
     overflow: hidden;
-    width: max-content;
+    /*width: max-content;*/
     margin: auto;
 
     /*overflow-wrap: break-word;*/
