--- a/src/styles/edit_panel.css
+++ b/src/styles/edit_panel.css
@@ -1,8 +1,12 @@
-.edit_panel {
+.edit_panel_p {
+    transform: translateX(-50%);
     position: fixed;
     bottom: 0;
     left: 50%;
+    z-index: 2;
+}
 
+.edit_panel {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -14,10 +18,7 @@
     border-radius: 20px 20px 0 0;
     white-space: nowrap;
 
-    transform: translateX(-50%);
-    animation: upAnimationEP .3s 1 ease-in-out;
-
-    z-index: 2;
+    animation: upAnimationEP .3s 1 ease-out;
 }
 
 .edit_panel .grey_bg {
