Varuables and navigation bar were added

--- a/src/styles/page.sass
+++ b/src/styles/page.sass
@@ -8,9 +8,26 @@
     background: $color-grey-light
     border-radius: 9px
 
+.navigation
+    max-width: 980px
+    margin: 40px auto -40px auto
+    color: $color-table-title
+    font-size: 10px
+    font-style: italic
+
+.navigation a
+     color: $color-table-title
+
 .page_content
     min-height: 600px
     padding: 10px
 
     background: $color-white
     border-radius: 9px
+
+.middleBlock
+    height: 500px
+    display: flex
+    align-items: center
+    justify-content: center
+
