--- a/src/styles/table.sass
+++ b/src/styles/table.sass
@@ -40,7 +40,7 @@ table tr:not(.checked):nth-child(odd)
     background: $color-grey-light-dark
 
 table tr.checked
-    border-color: $color-dark-blue
+    border-color: $color-blue-dark
     background: $color-grey-dark-light
 
 table tr
