--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -16,7 +16,7 @@ $color-red-darkest: #ff1240
 
 $color-blue: #005FF9
 $color-blue-darkest: #1021f9
-$color-dark-blue: #191933
+$color-blue-dark: #191933
 
 $color-table-title: #ababab
 
@@ -36,8 +36,8 @@ $color-checkbox-border: #BBC1E1
 $color-checkbox-area: $color-white
 $color-checkbox-sym: $color-white
 
-$color-checkbox-border-hover: $color-dark-blue
-$color-checkbox-border-checked: $color-dark-blue
-$color-checkbox-area-checked: $color-dark-blue
+$color-checkbox-border-hover: $color-blue-dark
+$color-checkbox-border-checked: $color-blue-dark
+$color-checkbox-area-checked: $color-blue-dark
 
 $color-modal-background: rgba(0,0,0,0.3)
