--- a/src/styles/edit_panel.sass
+++ b/src/styles/edit_panel.sass
@@ -15,7 +15,7 @@
     width: auto
     padding: 10px
 
-    background: $color-dark-blue
+    background: $color-blue-dark
     border-radius: 20px 20px 0 0
     white-space: nowrap
 
