--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -1,5 +1,6 @@
 $color-pink: #f22bf9
 $color-white: #FFFFFF
+$color-white-alpha: rgba(255, 255, 255, 0.9)
 $color-light-alpha-grey: rgba(0, 0, 0, 0.25)
 $color-yellow: yellow
 
