--- a/src/styles/input.sass
+++ b/src/styles/input.sass
@@ -28,7 +28,7 @@ input:focus
     outline: none
     resize: none
     font-size: 13px
-    font-weight: 600
+    font-family: 'Fira Sans SemiBold', sans-serif
     font-family: inherit
     width: 95%
 
@@ -40,7 +40,7 @@ input:focus
     background: none
     border: none
     font-size: 13px
-    font-weight: bold
+    font-family: 'Fira Sans SemiBold', sans-serif
     cursor: pointer
 
 .line .selectWindow
@@ -91,7 +91,7 @@ input:focus
     background: none
 
     font-size: 13px
-    font-weight: bold
+    font-family: 'Fira Sans SemiBold', sans-serif
     appearance: none
 
 input[type="submit"]
@@ -103,7 +103,6 @@ input[type="text"]
     height: 100%
 
     font-size: 13px
-    font-weight: normal
 
     border: none
     background: none
