--- a/src/styles/top.sass
+++ b/src/styles/top.sass
@@ -5,7 +5,7 @@
 
 .top_block .date
     font-size: 14px
-    font-weight: 600
+    font-family: 'Fira Sans SemiBold', sans-serif
     margin: 10px 0
 
     text-overflow: ellipsis
@@ -13,14 +13,12 @@
 
 .top_block .desc
     font-size: 14px
-    max-width: 400px
-
     text-overflow: ellipsis
     overflow: hidden
 
 .title-top
     font-size: 22px
-    font-weight: 600
+    font-family: 'Fira Sans SemiBold', sans-serif
     margin-right: 5px
 
     text-overflow: ellipsis
