--- a/src/styles/buttons.sass
+++ b/src/styles/buttons.sass
@@ -12,7 +12,7 @@ button
     margin: 2px
 
     font-size: 13px
-    font-weight: 600
+    font-family: 'Fira Sans SemiBold', sans-serif
 
     color: $color-white
     background: $color-pink
@@ -33,7 +33,7 @@ button
     padding: 10px
 
     font-size: 13px
-    font-weight: 600
+    font-family: 'Fira Sans SemiBold', sans-serif
 
     color: $color-white
     background: $color-pink
@@ -49,7 +49,7 @@ button
     height: 40px
     width: 300px
 
-    font-weight: bold
+    font-family: 'Fira Sans SemiBold', sans-serif
     font-size: 14px
 
     color: $color-white
