--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,5 +1,5 @@
 body
-    font-family: 'Fira Sans', sans-serif
+    font-family: 'Fira Sans Regular', sans-serif
     margin: 0
     padding: 0
     min-width: 320px
