--- a/src/styles/marks.sass
+++ b/src/styles/marks.sass
@@ -6,7 +6,7 @@
     display: inline-block
 
 table[name='marks']
-    width: auto
+    width: 600px
 
 .table .title-table
     text-align: left
@@ -14,6 +14,7 @@ table[name='marks']
 .table .search
     margin: 5px 0
     box-shadow: none
+
 
 table[name='marks'] th:nth-child(-n+2)
     width: 35px
@@ -46,6 +47,9 @@ table[name='marks'] td:nth-child(5):hover
     opacity: 1
 
 @media (max-width: 600px)
+    table[name='marks']
+        width: 100%
+
     table[name='marks'] th:nth-child(1)
         width: 10px
 
