Dev-server and animations were added

--- a/src/styles/fonts.sass
+++ b/src/styles/fonts.sass
@@ -1,5 +1,5 @@
 @font-face
-    font-family: Fira Sans Regular
+    font-family: Fira Sans
     src: local('FiraSans Regular')
     src: local('FiraSans-Regular')
     src: url('/practice/fonts/FiraSans-Regular.woff2') format('woff2')
@@ -7,9 +7,19 @@
     src: url('/practice/fonts/FiraSans-Regular.ttf') format('truetype')
 
 @font-face
-    font-family: Fira Sans SemiBold
+    font-family: Fira Sans
     src: local('FiraSans SemiBold')
     src: local('FiraSans-SemiBold')
     src: url('/practice/fonts/FiraSans-SemiBold.woff2') format('woff2')
     src: url('/practice/fonts/FiraSans-SemiBold.woff') format('woff')
     src: url('/practice/fonts/FiraSans-SemiBold.ttf') format('truetype')
+    font-weight: bold
+
+@font-face
+    font-family: Fira Sans
+    src: local('FiraSans Italic')
+    src: local('FiraSans-Italic')
+    src: url('/practice/fonts/FiraSans-Italic.woff2') format('woff2')
+    src: url('/practice/fonts/FiraSans-Italic.woff') format('woff')
+    src: url('/practice/fonts/FiraSans-Italic.ttf') format('truetype')
+    font-style: italic
