--- a/src/styles/modal.sass
+++ b/src/styles/modal.sass
@@ -41,7 +41,7 @@
 
 .modal .window .title, .modal .window .title_info
      font-size: 18px
-     font-family: 'Fira Sans SemiBold', sans-serif
+     font-weight: bold
      margin: 10px
 
 .modal .window .title_info
