--- a/src/styles/table.sass
+++ b/src/styles/table.sass
@@ -4,6 +4,7 @@ table
     width: 100%
     border-collapse: collapse
     table-layout: fixed
+    animation: visibleAnimation .5s 1 ease-out
 
 th
     font-size: 14px
