--- a/src/styles/input.sass
+++ b/src/styles/input.sass
@@ -28,7 +28,7 @@ input:focus
     outline: none
     resize: none
     font-size: 13px
-    font-family: 'Fira Sans SemiBold', sans-serif
+    font-weight: bold
     font-family: inherit
     width: 95%
 
@@ -40,7 +40,7 @@ input:focus
     background: none
     border: none
     font-size: 13px
-    font-family: 'Fira Sans SemiBold', sans-serif
+    font-weight: bold
     cursor: pointer
 
 .line .selectWindow
@@ -91,7 +91,7 @@ input:focus
     background: none
 
     font-size: 13px
-    font-family: 'Fira Sans SemiBold', sans-serif
+    font-weight: bold
     appearance: none
 
 input[type="submit"]
