--- a/src/styles/top.sass
+++ b/src/styles/top.sass
@@ -5,7 +5,7 @@
 
 .top_block .date
     font-size: 14px
-    font-family: 'Fira Sans SemiBold', sans-serif
+    font-weight: bold
     margin: 10px 0
 
     text-overflow: ellipsis
@@ -18,7 +18,7 @@
 
 .title-top
     font-size: 22px
-    font-family: 'Fira Sans SemiBold', sans-serif
+    font-weight: bold
     margin-right: 5px
 
     text-overflow: ellipsis
