Modal select was updated

--- a/src/styles/fonts.sass
+++ b/src/styles/fonts.sass
@@ -13,7 +13,16 @@
     src: url('/practice/fonts/FiraSans-SemiBold.woff2') format('woff2')
     src: url('/practice/fonts/FiraSans-SemiBold.woff') format('woff')
     src: url('/practice/fonts/FiraSans-SemiBold.ttf') format('truetype')
-    font-weight: bold
+    font-weight: 600
+
+@font-face
+    font-family: Fira Sans
+    src: local('FiraSans Medium')
+    src: local('FiraSans-Medium')
+    src: url('/practice/fonts/FiraSans-Medium.woff2') format('woff2')
+    src: url('/practice/fonts/FiraSans-Medium.woff') format('woff')
+    src: url('/practice/fonts/FiraSans-Medium.ttf') format('truetype')
+    font-weight: 500
 
 @font-face
     font-family: Fira Sans
