--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -2,6 +2,7 @@ $color-pink: #f22bf9
 $color-white: #FFFFFF
 $color-white-alpha: rgba(255, 255, 255, 0.9)
 $color-light-alpha-grey: rgba(0, 0, 0, 0.25)
+$color-light-light-shadow: rgba(0, 0, 0, 0.1)
 $color-yellow: yellow
 
 $color-grey-light: #EFEFEF
@@ -41,4 +42,4 @@ $color-checkbox-border-hover: $color-blue-dark
 $color-checkbox-border-checked: $color-blue-dark
 $color-checkbox-area-checked: $color-blue-dark
 
-$color-modal-background: rgba(0,0,0,0.3)
+$color-modal-background: rgba(0, 0, 0, 0.3)
