--- a/src/styles/animations.sass
+++ b/src/styles/animations.sass
@@ -11,3 +11,11 @@
         opacity: 0
     to
         opacity: 1
+
+@keyframes openAnimation
+    from
+        opacity: 0
+        transform: scaleY(0)
+    to
+        opacity: 1
+        transform: scaleY(1)
