--- a/src/styles/buttons.sass
+++ b/src/styles/buttons.sass
@@ -12,7 +12,7 @@ button
     margin: 2px
 
     font-size: 13px
-    font-weight: bold
+    font-weight: 600
 
     color: $color-white
     background: $color-pink
@@ -33,7 +33,7 @@ button
     padding: 10px
 
     font-size: 13px
-    font-weight: bold
+    font-weight: 600
 
     color: $color-white
     background: $color-pink
@@ -49,12 +49,12 @@ button
     height: 40px
     width: 300px
 
-    font-weight: bold
+    font-weight: 600
     font-size: 14px
 
     color: $color-white
     border: none
-    border-radius: 12px
+    border-radius: 6px
     box-shadow: none
 
     cursor: pointer
