--- a/src/styles/modal.sass
+++ b/src/styles/modal.sass
@@ -25,8 +25,9 @@
     overflow-y: scroll
     -ms-overflow-style: none
 
-    background: $color-white
-    border-radius: 10px
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
+    background: #fefdff
+    border-radius: 6px
 
     margin: 10px
     padding: 20px
@@ -41,7 +42,7 @@
 
 .modal .window .title, .modal .window .title_info
      font-size: 18px
-     font-weight: bold
+     font-weight: 600
      margin: 10px
 
 .modal .window .title_info
@@ -62,9 +63,10 @@
     width: 100%
     height: 100%
     background: $color-modal-background
+    backdrop-filter: blur(1px)
 
 .modal .standard_btn
-    margin: 10px auto 10px auto
+    margin: 5px auto auto auto
 
 .modal .choice .standard_btn:first-child
     margin-right: 10px
@@ -76,8 +78,8 @@
 
 .modal .window .close
     position: absolute
-    top: 15px
-    right: 15px
+    top: 10px
+    right: 10px
     cursor: pointer
     opacity: 0.7
 
@@ -88,8 +90,9 @@
     opacity: 1
 
 .modal .window .err
-    width: 280px
-    margin: -10px auto auto auto
+    width: 282px
+    //width: 300px
+    margin: -6px auto -6px auto
 
     text-align: left
     color: red
