--- a/src/styles/page.sass
+++ b/src/styles/page.sass
@@ -8,6 +8,10 @@
     background: $color-grey-light
     border-radius: 9px
 
+.page.scrollOff
+    overflow: hidden
+    height: 100vh
+
 .navigation
     max-width: 980px
     margin: 40px auto -40px auto
